--- a/index.html
+++ b/index.html
@@ -1,52 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <section class="pimg1">
-        <div class="ptext">
-            <span class="textbg">Parallax Website</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Developer Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="colour_section">
+      <section class="hero_section">
+        <div class="text_container">
+          <h2>
+            Hi, I am<br />
+            <span class="john">John</span><br />
+            <span class="deo">Doe</span>
+          </h2>
+          <h1 class="full">FULL</h1>
+          <h1 class="stack">STACK</h1>
+          <h1 class="Developer">DEVELOPER</h1>
         </div>
+      </section>
+
+      <section class="my_section">
+        <h1>The work, i can do for <span class="you">you</span></h1>
+      </section>
     </section>
-    <section class="text_section1">
-        <h1>What Is Nature?</h1>
-        <p>Nature refers to the physical world and all the living and non-living things that exist independently of human activities. It includes ecosystems, wildlife, plants, oceans, mountains, weather, and natural phenomena. Nature operates through complex interactions and cycles, such as the water cycle, food chains, and natural selection, which sustain life on Earth. It is both a source of beauty and inspiration and a critical provider of resources, such as air, water, and food, that humans and all other living beings rely on for survival. Nature's balance is delicate, and its preservation is essential for maintaining the planet's health and biodiversity.</p>
+
+  <section class="colour_section2">
+    <!-- app wali picture ka ha ye -->
+    <section class="work1">
+      <div class="card1">
+        <div class="image_container1"></div>
+        <div class="card_content1">
+          <h3><b>App development</b></h3>
+          <p>
+            I am an App Developer. I can try my best to develop app for you with
+            the experience of four years therefore give me a chance to serve
+            you.
+          </p>
+        </div>
+      </div>
     </section>
-        <section class="pimg2">
-            <div class="ptext2">
-                <span class="textbg2">Explore the nature</span>
-            </div>
-        </section>
-        <section class="text_section2">
-            <h1>Importance of nature</h1>
-            <p>Nature is essential for life on Earth, providing the air we breathe, the water we drink, and the food we eat. It supports biodiversity, which maintains ecological balance and resilience. Interacting with nature benefits our mental and physical health, offering peace, inspiration, and opportunities for recreation. Economically, nature supplies resources and ecosystem services vital to industries and livelihoods. It also plays a crucial role in regulating the climate, helping to mitigate the impacts of climate change. In essence, nature sustains us, enriches our lives, and ensures the health of our planet.</p>
-        </section>
 
-        <section class="pimg3">
-            <div class="ptext3">
-                <span class="textbg3">Enjoy the nature</span>
-            </div>
-        </section>
-        <section class="text_section3">
-            <h1>Benefit the nature</h1>
-            <p>We can benefit nature by adopting sustainable practices that reduce our environmental impact. This includes conserving resources like water and energy, reducing waste through recycling and composting, and choosing eco-friendly products. Protecting natural habitats by supporting conservation efforts and reducing deforestation helps preserve biodiversity. Additionally, minimizing pollution by using public transportation, reducing plastic use, and supporting clean energy initiatives contributes to a healthier environment. Engaging in reforestation projects, protecting wildlife, and advocating for policies that prioritize environmental protection are also crucial steps in ensuring that nature thrives for future generations.</p>
-        </section>
+    <!-- web wali picture ka ha ye -->
+    <section class="work2">
+      <div class="card2">
+        <div class="image_container2"></div>
+        <div class="card_content2">
+          <h3> <b>Web development</b></h3>
+          <p>
+            I am an Web Developer. I can try my best to develop websites for you
+            with the experience of four years therefore give me a chance to
+            serve you.
+          </p>
+        </div>
+      </div>
+    </section>
 
-        <section class="pimg4">
-            <div class="ptext4">
-                <span class="textbg4">Let's save the nature</span>
-            </div>
-        </section>
+    <!-- uiux wali picture ka ha ye -->
+    <section class="work3">
+      <div class="card3">
+        <div class="image2_container3"></div>
+        <div class="card_content3">
+          <h3><b>UI UX development</b></h3>
+          <p>
+            I am an UI UX designer. I can try my best to design UI UX for you
+            with the experience of four years therefore give me a chance to
+            serve you.
+          </p>
+        </div>
+      </div>
+    </section>
+  </section>
 
-        <section class="text_section4">
-            <h1>nature is life</h1>
-            <p>
-                Saving nature is not just a responsibility, but a necessity for the survival of future generations. By protecting our forests, oceans, and wildlife, we maintain the delicate balance that sustains life on Earth. Simple actions like reducing waste, conserving water, and supporting sustainable practices can make a significant impact. Moreover, advocating for policies that protect natural habitats and combat climate change is crucial. Every individual effort counts, from planting a tree to reducing carbon footprints. Together, we can preserve the beauty and diversity of our planet for the benefit of all living beings</p>
-        </section>
-    
-</body>
+  <section class="about_section">
+    <div>
+      <div class="black_line">
+      <h2 class="about">Abou<span class="t">t</span></h2>
+    </div>
+    <div class="about_colour">
+      <h4>Why should you choose me?</h4>
+      <ul>
+        <li>I am dedicated towards my work.</li>
+        <li>I try my best to finish task on time.</li>
+        <li>I try to perform my task as per client's direction.</li>
+        <li>I try to remain more polite and respected with clients.</li>
+        <li>I am not perfect but I am dedicated and hardworking.</li>
+      </ul>
+    </div>
+  </section>  
+  </body>
 </html>
